Spesifiser docker path

--- a/.github/workflows/todo.yaml
+++ b/.github/workflows/todo.yaml
@@ -19,6 +19,7 @@ jobs:
         id: docker-build-push
         with:
           team: ung-i-nav
+          docker_context: todo
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
       - name: Deploy to dev
